fixed font weight for readability in chrome

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -55,7 +55,7 @@ $timetable-entry-padding: 10px !default
 
 body
   font-family: 'Open Sans', 'Helvetica', sans-serif
-  font-weight: 300
+  font-weight: 400
   color: $text-color
   line-height: 2
   -webkit-font-smoothing: antialiased
